Name:                cryptonite
Version:             0.1.0
Synopsis:            Crypto stuff
Description:         cryptography
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/vincenthz/cryptonite
Bug-reports:         https://github.com/vincenthz/cryptonite/issues
Cabal-Version:       >=1.10
extra-source-files:  README.md
                     cbits/*.h

source-repository head
  type: git
  location: https://github.com/vincenthz/cryptonite

Library
  Exposed-modules:   Crypto.Cipher.ChaCha
                     Crypto.Cipher.Salsa
                     Crypto.Cipher.RC4
                     Crypto.MAC.Poly1305
                     Crypto.MAC.HMAC
                     Crypto.KDF.PBKDF2
                     Crypto.KDF.Scrypt
                     Crypto.Hash
                     Crypto.Hash.SHA1
                     Crypto.Hash.SHA224
                     Crypto.Hash.SHA256
                     Crypto.Hash.SHA384
                     Crypto.Hash.SHA512
                     Crypto.Hash.SHA512t
                     Crypto.Hash.SHA3
                     Crypto.Hash.Kekkak
                     Crypto.Hash.MD2
                     Crypto.Hash.MD4
                     Crypto.Hash.MD5
                     Crypto.Hash.RIPEMD160
                     Crypto.Hash.Skein256
                     Crypto.Hash.Skein512
                     Crypto.Hash.Tiger
                     Crypto.Hash.Whirlpool
                     Crypto.Random.Types
                     Crypto.Random.Entropy
  Other-modules:     Crypto.Hash.Internal
                   , Crypto.Hash.Utils
                   , Crypto.Hash.Types
                   , Crypto.Random.Entropy.Source
  Build-depends:     base >= 4.5 && < 5
                   , bytestring
                   , securemem
                   , byteable
                   , ghc-prim
  ghc-options:       -Wall -fwarn-tabs -optc-O3
  default-language:  Haskell2010
  C-sources:         cbits/cryptonite_chacha.c
                   , cbits/cryptonite_salsa.c
                   , cbits/cryptonite_rc4.c
                   , cbits/cryptonite_poly1305.c
                   , cbits/cryptonite_sha1.c
                   , cbits/cryptonite_sha256.c
                   , cbits/cryptonite_sha512.c
                   , cbits/cryptonite_sha3.c
                   , cbits/cryptonite_kekkak.c
                   , cbits/cryptonite_md2.c
                   , cbits/cryptonite_md4.c
                   , cbits/cryptonite_md5.c
                   , cbits/cryptonite_ripemd.c
                   , cbits/cryptonite_skein256.c
                   , cbits/cryptonite_skein512.c
                   , cbits/cryptonite_tiger.c
                   , cbits/cryptonite_whirlpool.c
                   , cbits/cryptonite_scrypt.c
  if (arch(i386) || arch(x86_64))
    CPP-options: -DARCH_IS_LITTLE_ENDIAN

  if arch(x86_64)
    cpp-options:    -DSUPPORT_RDRAND
    Other-modules:  Crypto.Random.Entropy.RDRand
    c-sources:      cbits/cryptonite_rdrand.c

  if os(windows)
    cpp-options:    -DWINDOWS
    Build-Depends:  Win32
    Other-modules:  Crypto.Random.Entropy.Windows
    extra-libraries: advapi32
  else
    Other-modules:  Crypto.Random.Entropy.Unix

Test-Suite test-cryptonite
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  Main-is:           Tests.hs
  Build-Depends:     base >= 3 && < 5
                   , bytestring
                   , byteable
                   , tasty
                   , tasty-quickcheck
                   , tasty-hunit
                   , cryptonite
  ghc-options:       -Wall -fno-warn-orphans -fno-warn-missing-signatures
  default-language:  Haskell2010
